// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should have some default classes & default text + icon 1`] = `
<article
  className="loader"
>
  <p
    className="loader__spinner"
  >
    <i
      className="fab fa-cuttlefish fa-spin"
    />
  </p>
  <p
    className="loader__text"
  >
    Daten werden geladen...
  </p>
</article>
`;

exports[`Loader should set an overlay class 1`] = `
<article
  className="loader loader--overlay"
>
  <p
    className="loader__spinner"
  >
    <i
      className="fa-blublu fa-spin"
    />
    <br />
    ICH BIN EIN OVERLAY
  </p>
</article>
`;

exports[`Loader should show customized text & icon 1`] = `
<article
  className="loader"
>
  <p
    className="loader__spinner"
  >
    <i
      className="fas fa-blabla fa-spin"
    />
  </p>
  <p
    className="loader__text"
  >
    WORK HARD, PLAY HARD
  </p>
</article>
`;
